Changing base path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
     "outDir": "./dist", // Output directory for compiled files
-    "rootDir": "./", // Source directory for TypeScript files
+    "rootDir": "./src", // Source directory for TypeScript files
     "module": "commonjs",
     "target": "es6",
     "jsx": "react-jsx",
     "strict": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*", "example/App.tsx", "example"], // Include all files in the src folder
+  "include": ["src/**/*"], // Include all files in the src folder
   "exclude": ["node_modules"]
 }
