--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "state-jet",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Ultra-lightweight global state management for React",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/index.mjs",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
@@ -20,7 +22,10 @@
     "react",
     "state-management",
     "global-state",
-    "signals"
+    "signals",
+    "state-jet",
+    "state",
+    "jet"
   ],
   "author": "venkateshsundaram",
   "license": "MIT",
@@ -35,12 +40,10 @@
     "lint": "eslint src --ext .ts,.tsx"
   },
   "devDependencies": {
-    "@types/react": "^19.0.3",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "^18.2.0",
     "eslint": "^8.57.1",
     "immer": "^10.1.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^18.2.0",
     "typescript": "^5.7.3",
     "vitest": "^2.1.8"
   },
