--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,18 @@
 {
   "compilerOptions": {
-    "outDir": "./dist", // Output directory for compiled files
-    "rootDir": "./src", // Source directory for TypeScript files
-    "module": "commonjs",
-    "target": "es6",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "declaration": true,
+    "declarationMap": true,
+    "declarationDir": "dist/types",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "target": "ESNext",
     "jsx": "react-jsx",
+    "lib": ["ESNext", "DOM"],
     "strict": true,
     "esModuleInterop": true
   },
   "include": ["src/**/*"], // Include all files in the src folder
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
