--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "state-jet",
-  "version": "1.0.8",
+  "version": "1.0.10",
   "description": "Ultra-lightweight global state management for React",
-  "main": "dist/index.js",
-  "types": "dist/types/index.d.ts",
+  "main": "dist/index.cjs",
   "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
-    }
+    "import": "./dist/index.mjs",
+    "require": "./dist/index.cjs",
+    "types": "./dist/index.d.ts"
   },
   "repository": {
     "type": "git",
@@ -33,35 +32,32 @@
     "url": "https://github.com/venkateshsundaram/state-jet/issues"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf dist && rollup -c",
     "test": "vitest",
-    "clean": "rm -rf dist/*",
-    "prepare": "npm run build",
+    "clean": "rimraf dist",
     "publish:npm": "npm publish --access public",
     "lint": "eslint src --ext .ts,.tsx"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@types/use-sync-external-store": "^0.0.6",
     "eslint": "^8.57.1",
     "immer": "^10.1.1",
-    "react": "^18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "rimraf": "^5.0.10",
+    "rollup": "^3.29.4",
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-esbuild": "^5.0.0",
     "typescript": "^5.7.3",
     "vitest": "^2.1.8"
   },
   "peerDependencies": {
-    "@types/react": ">=18.0.0",
-    "immer": ">=9.0.6",
-    "react": ">=18.0.0"
+    "react": ">=18.0.0",
+    "use-sync-external-store": ">=1.2.0"
   },
-  "peerDependenciesMeta": {
-    "@types/react": {
-      "optional": true
-    },
-    "immer": {
-      "optional": true
-    },
-    "react": {
-      "optional": true
-    }
-  }
+  "type": "module"
 }
