feat: supporting advanced features

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "state-jet",
-  "version": null,
+  "version": "1.0.13",
   "description": "Ultra-lightweight global state management for React",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
