--- a/.versionrc.json
+++ b/.versionrc.json
@@ -1,28 +1,59 @@
 {
     "types": [
         {
-            "type": "feat",
-            "section": "Features"
-        },
-        {
-            "type": "fix",
-            "section": "Bug Fixes"
+            "type": "build",
+            "section": "Build System",
+            "hidden": false
         },
         {
             "type": "chore",
-            "section": "Chores"
+            "section": "Chores",
+            "hidden": false
         },
         {
-            "type": "refactor",
-            "section": "Refactors"
+            "type": "ci",
+            "section": "Continuous Integration",
+            "hidden": false
         },
         {
             "type": "docs",
-            "section": "Documentation"
+            "section": "Documentation",
+            "hidden": false
+        },
+        {
+            "type": "feat",
+            "section": "Features",
+            "hidden": false
+        },
+        {
+            "type": "fix",
+            "section": "Bug Fixes",
+            "hidden": false
+        },
+        {
+            "type": "perf",
+            "section": "Performance Improvements",
+            "hidden": false
+        },
+        {
+            "type": "refactor",
+            "section": "Code Refactoring",
+            "hidden": false
+        },
+        {
+            "type": "revert",
+            "section": "Reverts",
+            "hidden": false
+        },
+        {
+            "type": "style",
+            "section": "Code Style",
+            "hidden": false
         },
         {
             "type": "test",
-            "section": "Testing"
+            "section": "Tests",
+            "hidden": false
         }
     ]
 }
