--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/rollup-linux-x64-gnu": "^4.35.0",
+    "@testing-library/react": "^16.1.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/use-sync-external-store": "^0.0.6",
@@ -87,6 +87,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
     "immer": "^10.1.1",
+    "jsdom": "^26.0.0",
     "lint-staged": "^15.4.3",
     "prettier": "^3.5.3",
     "react": "19.0.0",
@@ -97,11 +98,28 @@
     "rollup-plugin-esbuild": "^5.0.0",
     "standard-version": "^9.5.0",
     "typescript": "^5.7.3",
+    "use-sync-external-store": "^1.4.0",
     "vitest": "^2.1.8"
   },
   "peerDependencies": {
+    "@types/react": ">=18.0.0",
+    "immer": ">=9.0.6",
     "react": ">=18.0.0",
     "use-sync-external-store": ">=1.2.0"
+  },
+  "peerDependenciesMeta": {
+    "@types/react": {
+      "optional": true
+    },
+    "immer": {
+      "optional": true
+    },
+    "react": {
+      "optional": true
+    },
+    "use-sync-external-store": {
+      "optional": true
+    }
   },
   "type": "module"
 }
