docs: updating website and readme

--- a/package.json
+++ b/package.json
@@ -31,8 +31,29 @@
     "global-state-management",
     "signals",
     "state-jet",
+    "statejet",
+    "state-jet-react",
     "jet",
-    "store"
+    "react-jet",
+    "jetstate",
+    "jet-state",
+    "react-jetstate",
+    "react-hooks",
+    "store",
+    "hooks",
+    "javascript",
+    "typescript",
+    "global",
+    "react-state-management",
+    "state-manager",
+    "global-state-hooks",
+    "state-hooks",
+    "use-store",
+    "client-state",
+    "react-utility",
+    "hooks-utility",
+    "redux-alternative",
+    "context-alternative"
   ],
   "author": "venkateshsundaram",
   "license": "MIT",
