--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "type": "git",
     "url": "https://github.com/venkateshsundaram/state-jet.git"
   },
-  "homepage": "https://statejet.netlify.app",
+  "homepage": "https://statejet.org",
   "keywords": [
     "react",
     "state",
